--- a/_posts/2017-01-15-Test.md
+++ b/_posts/2017-01-15-Test.md
@@ -14,3 +14,5 @@ published: true
 $$ y=3x^2+2$$
 
 ![tree](https://vienna-wv.com/images/tree.jpg)
+
+![default](https://cloud.githubusercontent.com/assets/24986127/21961014/b7841086-db41-11e6-97ce-85d0ec4c3874.png)
