새 파일 추가 gittest.md

--- a/_posts/2017-01-15-Test.md
+++ b/_posts/2017-01-15-Test.md
@@ -1,15 +1,11 @@
 ---
 layout: post
-title: Test
+title: 일기
 subtitle: Test on Jekyll
-date: '2017-01-15'
+date: '2017-01-16'
 published: true
 ---
 
 # TITLE
 
-$$ y=3x^2+2$$
-
-![tree](https://vienna-wv.com/images/tree.jpg)
-
-![default](https://cloud.githubusercontent.com/assets/24986127/21961014/b7841086-db41-11e6-97ce-85d0ec4c3874.png)
+* 일기를 쓰겠다
