--- a/_posts/2017-01-15-diary.md
+++ b/_posts/2017-01-15-diary.md
@@ -13,3 +13,5 @@ published: true
 * 2017-02-25 first day at school dormitory. bit nervous about bed. luckily first to arrive.
 
 * 2017-02-26 second day at school dormitory. wake up at 7:30. have breakfast with parents. have lunch alone(ramen). have dinner alone (jajangmen)
+
+* 2017-02-27 third day at school dormitory. wake up at 6:30. have breakfast at school cafe. had entering ceremony. BeWhy and Ohmygirl. BeWhy is fucking awesome. after that, nothing. 
